[package]
name = "pg-peek-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bitflags = { version = "2", features = ["serde"] }
byteorder = "1"
regex = "1"
strum = "0"
strum_macros = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"


